data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4471.wast
;; 10. Design a situation where `call_indirect` is called with boundary indices (e.g., exactly at 0 and at max valid index) ensuring the implementation properly handles boundary conditions without improper function calls or execution.

(assert_invalid
  (module
    (type $funcType (func))
    (table funcref (elem $funcIndex ()))
    (func $testBoundaries 
      (i32.const 0) 
      (call_indirect (type $funcType) (i32.const 0))
      (i32.const -1) 
      (call_indirect (type $funcType) (i32.const -1))
      (i32.const 1) 
      (call_indirect (type $funcType) (i32.const 1))
    )
  )
  "index out of bounds"
)